unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Default_New_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_New_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default New Payment Method</label>
    <type>Checkbox</type>
</CustomField>