unpackaged/main/default/objects/bt_stripe__Virtual_Terminal_Settings__c/fields/bt_stripe__Show_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Show_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Address</label>
    <type>Checkbox</type>
</CustomField>